# gl-matrix-c

./: CMakeLists.txt  README.md
src/: main.c
src/gl-matrix/: defs.h  dummy.c  gl-matrix.h  mat2.c  mat2d.c  mat3.c  mat4.c  nice-types.h  quat.c  quat2.c  utils.c  utils.h  vec2.c  vec3.c  vec4.c
